# six_dof_arm

./: README.md
six_dof_moveit_config/: .setup_assistant  package.xml
six_dof_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  six_dof_urdf.ros2_control.xacro  six_dof_urdf.srdf  six_dof_urdf.urdf.xacro
six_dof_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
six_dof_urdf_description/: package.xml  setup.cfg  setup.py
six_dof_urdf_description/config/: controller_config.yaml
six_dof_urdf_description/launch/: display.launch.py  gazebo.launch.py  simulation.launch.py
six_dof_urdf_description/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl
six_dof_urdf_description/six_dof_urdf_description/: gui_to_controller.py
six_dof_urdf_description/urdf/: materials.xacro  six_dof_urdf.gazebo  six_dof_urdf.ros2control  six_dof_urdf.xacro
